Fix: Remove light theme flash when changing pages
- Added inline script in <head> of all HTML pages
- Theme is applied before render to prevent FOUC (Flash of Unstyled Content)
- Updated main.js to use document.documentElement instead of document.body
- Maintains consistency between inline script and theme toggler

--- a/Front/index.html
+++ b/Front/index.html
@@ -5,6 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rain Check</title>
+    <!-- Theme loader - prevents flash of wrong theme -->
+    <script>
+        (function() {
+            const savedTheme = localStorage.getItem('theme');
+            if (savedTheme) {
+                document.documentElement.setAttribute('data-theme', savedTheme);
+            }
+        })();
+    </script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
@@ -20,9 +29,9 @@
                 <a href="index.html" class="logo">Raincheck</a>
                 <ul>
                     <li><a href="#specific" class="active">Home</a></li>
-                    <li><a href="today.html">Today</a></li>
-                    <li><a href="week.html">This Week</a></li>
-                    <li><a href="about.html">About</a></li>
+                    <li><a href="pages/today.html">Today</a></li>
+                    <li><a href="pages/week.html">This Week</a></li>
+                    <li><a href="pages/about.html">About</a></li>
                 </ul>
                 <button class="theme-toggler" id="theme-toggler" aria-label="Toggle theme">
                     <div class="toggler"></div>
@@ -35,7 +44,7 @@
         <section id="overview">
             <div class="overview-grid">
                 <!-- Today's Weather Preview -->
-                <a href="today.html" class="overview-card-link">
+                <a href="pages/today.html" class="overview-card-link">
                     <div class="card">
                         <div class="overview-header">
                             <h2>Today's Weather</h2>
@@ -51,7 +60,7 @@
                     </div>
                 </a>
                 <!-- Weekly Weather Preview -->
-                <a href="week.html" class="overview-card-link">
+                <a href="pages/week.html" class="overview-card-link">
                     <div class="card">
                         <div class="overview-header">
                             <h2>Weekly Forecast</h2>
