Feat: Implement mobile-first responsive design with hamburger menu
- Added hamburger menu for mobile navigation
- Converted all CSS to mobile-first approach with min-width media queries
- Optimized grid layouts for mobile, tablet, and desktop breakpoints
- Added smooth menu transitions and animations
- Improved touch targets and spacing for mobile devices
- Menu closes on link click and outside click for better UX
- Responsive adjustments for all major components (cards, grids, forms, etc.)
- Fixed hamburger menu layout by grouping it with theme toggler on the right
- Adjusted breakpoint to 640px for better tablet support

--- a/Front/index.html
+++ b/Front/index.html
@@ -27,7 +27,12 @@
         <div class="container">
             <nav>
                 <a href="index.html" class="logo">Raincheck</a>
-                <ul>
+                <button class="hamburger" id="hamburger" aria-label="Toggle menu">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </button>
+                <ul class="nav-menu" id="nav-menu">
                     <li><a href="#specific" class="active">Home</a></li>
                     <li><a href="pages/today.html">Today</a></li>
                     <li><a href="pages/week.html">This Week</a></li>
