--- a/Front/pages/week.html
+++ b/Front/pages/week.html
@@ -24,7 +24,12 @@
         <div class="container">
             <nav>
                 <a href="../index.html" class="logo">Raincheck</a>
-                <ul>
+                <button class="hamburger" id="hamburger" aria-label="Toggle menu">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </button>
+                <ul class="nav-menu" id="nav-menu">
                     <li><a href="../index.html#specific">Home</a></li>
                     <li><a href="today.html">Today</a></li>
                     <li><a href="week.html" class="active">This Week</a></li>
