Enhance weekly forecast page with improved layout and details
- Changed from 7-day to 6-day forecast for better grid layout (2x3)
- Added comprehensive weather information to each day card:
  - Date display next to day name
  - Weather condition text (Sunny, Rainy, etc.)
  - Max/min temperatures with visual hierarchy
  - Rain probability with droplet icon
  - Wind speed with wind icon
- Implemented responsive grid layout:
  - Mobile: auto-fit columns
  - Tablet 640px+: 2 columns with 3rem gap
  - Tablet 768px+: 2 columns with 3.5rem gap
  - Desktop 1024px+: 3 columns with 4rem gap (perfect 2x3 layout)
- Added responsive sizing for all elements:
  - Icons: 2.5rem mobile to 3.5rem desktop
  - Temperatures: progressive sizing across breakpoints
  - Padding: increases from 1rem mobile to 2rem desktop
  - Internal gaps: optimized for each breakpoint
- Added section padding to prevent cards from touching viewport edges
- Improved card hover effects with primary color border
- Enhanced visual hierarchy with better spacing and typography

--- a/Front/pages/about.html
+++ b/Front/pages/about.html
@@ -24,20 +24,22 @@
         <div class="container">
             <nav>
                 <a href="../index.html" class="logo">Raincheck</a>
-                <button class="hamburger" id="hamburger" aria-label="Toggle menu">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </button>
                 <ul class="nav-menu" id="nav-menu">
                     <li><a href="../index.html">Home</a></li>
                     <li><a href="today.html">Today</a></li>
                     <li><a href="week.html">This Week</a></li>
                     <li><a href="about.html" class="active">About</a></li>
                 </ul>
-                <button class="theme-toggler" id="theme-toggler" aria-label="Toggle theme">
-                    <div class="toggler"></div>
-                </button>
+                <div class="nav-actions">
+                    <button class="hamburger" id="hamburger" aria-label="Toggle menu">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </button>
+                    <button class="theme-toggler" id="theme-toggler" aria-label="Toggle theme">
+                        <div class="toggler"></div>
+                    </button>
+                </div>
             </nav>
         </div>
     </header>
