feat: Make entire website dynamic with API integration
- Add complete API integration with WeatherAPI module in utils.js
- Create config.js for easy API endpoint configuration
- Implement dynamic data loading for all pages (index, today, week)
- Add smart weather icon selection based on conditions
- Implement location persistence with localStorage
- Add reverse geocoding for map location selection
- Create page-specific JS modules (today.js, week.js)
- Add comprehensive API documentation and mapping guide
- Include example JSON responses for development
- Update all HTML pages to include required scripts

The frontend now fully consumes the backend API with expected JSON format:
- GET /api/weather (current weather)
- GET /api/forecast/weekly (6-day forecast)

All UI elements update dynamically based on API responses.

--- a/Front/index.html
+++ b/Front/index.html
@@ -183,6 +183,8 @@
 
     </main>
 
+    <script src="js/config.js"></script>
+    <script src="js/utils.js"></script>
     <script src="js/main.js"></script>
     <script src="js/map.js"></script>
 </body>
