--- a/Front/pages/today.html
+++ b/Front/pages/today.html
@@ -68,6 +68,9 @@
         </section>
     </main>
 
+    <script src="../js/config.js"></script>
+    <script src="../js/utils.js"></script>
     <script src="../js/main.js"></script>
+    <script src="../js/today.js"></script>
 </body>
 </html>
