--- a/Front/pages/week.html
+++ b/Front/pages/week.html
@@ -149,6 +149,9 @@
         </section>
     </main>
 
+    <script src="../js/config.js"></script>
+    <script src="../js/utils.js"></script>
     <script src="../js/main.js"></script>
+    <script src="../js/week.js"></script>
 </body>
 </html>
