--- a/Front/pages/week.html
+++ b/Front/pages/week.html
@@ -47,104 +47,9 @@
     <main class="container">
         <section id="week">
             <h1>Week</h1>
-            <p class="week-subtitle">Buenos Aires, Argentina</p>
-            <div class="week-cards">
-                <div class="day-card">
-                    <div class="day-card-header">
-                        <h3>Monday</h3>
-                        <span class="day-date">Oct 6</span>
-                    </div>
-                    <i class="wi wi-day-sunny" aria-hidden="true"></i>
-                    <p class="day-condition">Sunny</p>
-                    <div class="day-temp">
-                        <span class="temp-max">26°</span>
-                        <span class="temp-min">18°</span>
-                    </div>
-                    <div class="day-extra">
-                        <span><i class="wi wi-raindrop"></i> 10%</span>
-                        <span><i class="wi wi-strong-wind"></i> 12 km/h</span>
-                    </div>
-                </div>
-                <div class="day-card">
-                    <div class="day-card-header">
-                        <h3>Tuesday</h3>
-                        <span class="day-date">Oct 7</span>
-                    </div>
-                    <i class="wi wi-day-cloudy" aria-hidden="true"></i>
-                    <p class="day-condition">Partly Cloudy</p>
-                    <div class="day-temp">
-                        <span class="temp-max">24°</span>
-                        <span class="temp-min">17°</span>
-                    </div>
-                    <div class="day-extra">
-                        <span><i class="wi wi-raindrop"></i> 20%</span>
-                        <span><i class="wi wi-strong-wind"></i> 15 km/h</span>
-                    </div>
-                </div>
-                <div class="day-card">
-                    <div class="day-card-header">
-                        <h3>Wednesday</h3>
-                        <span class="day-date">Oct 8</span>
-                    </div>
-                    <i class="wi wi-day-rain" aria-hidden="true"></i>
-                    <p class="day-condition">Rainy</p>
-                    <div class="day-temp">
-                        <span class="temp-max">22°</span>
-                        <span class="temp-min">16°</span>
-                    </div>
-                    <div class="day-extra">
-                        <span><i class="wi wi-raindrop"></i> 80%</span>
-                        <span><i class="wi wi-strong-wind"></i> 18 km/h</span>
-                    </div>
-                </div>
-                <div class="day-card">
-                    <div class="day-card-header">
-                        <h3>Thursday</h3>
-                        <span class="day-date">Oct 9</span>
-                    </div>
-                    <i class="wi wi-day-showers" aria-hidden="true"></i>
-                    <p class="day-condition">Showers</p>
-                    <div class="day-temp">
-                        <span class="temp-max">23°</span>
-                        <span class="temp-min">17°</span>
-                    </div>
-                    <div class="day-extra">
-                        <span><i class="wi wi-raindrop"></i> 60%</span>
-                        <span><i class="wi wi-strong-wind"></i> 14 km/h</span>
-                    </div>
-                </div>
-                <div class="day-card">
-                    <div class="day-card-header">
-                        <h3>Friday</h3>
-                        <span class="day-date">Oct 10</span>
-                    </div>
-                    <i class="wi wi-day-sunny-overcast" aria-hidden="true"></i>
-                    <p class="day-condition">Mostly Sunny</p>
-                    <div class="day-temp">
-                        <span class="temp-max">25°</span>
-                        <span class="temp-min">18°</span>
-                    </div>
-                    <div class="day-extra">
-                        <span><i class="wi wi-raindrop"></i> 15%</span>
-                        <span><i class="wi wi-strong-wind"></i> 10 km/h</span>
-                    </div>
-                </div>
-                <div class="day-card">
-                    <div class="day-card-header">
-                        <h3>Saturday</h3>
-                        <span class="day-date">Oct 11</span>
-                    </div>
-                    <i class="wi wi-cloudy" aria-hidden="true"></i>
-                    <p class="day-condition">Cloudy</p>
-                    <div class="day-temp">
-                        <span class="temp-max">27°</span>
-                        <span class="temp-min">19°</span>
-                    </div>
-                    <div class="day-extra">
-                        <span><i class="wi wi-raindrop"></i> 25%</span>
-                        <span><i class="wi wi-strong-wind"></i> 13 km/h</span>
-                    </div>
-                </div>
+            <p class="week-subtitle" id="week-location">Loading...</p>
+            <div class="week-cards" id="week-cards">
+                <!-- Cards will be populated dynamically -->
             </div>
         </section>
     </main>
