fix property names in week.js to match actual JSON structure
- Fix wind.direction_deg (was direction_degrees)
- Fix wind.gusts_m_s (was gust_m_s)
- Fix solar.sunrise/sunset (was sunrise_utc/sunset_utc)
- Fix air_quality.aerosol_optical_depth (was aod)
- Fix lightning.risk_level (was risk)
- Fix model_output.confidence_score (was confidence)
- Add fallbacks for both old and new property names
- Add null safety checks with optional chaining

--- a/Front/pages/week.html
+++ b/Front/pages/week.html
@@ -48,8 +48,8 @@
         <section id="week">
             <h1>Week</h1>
             <p class="week-subtitle" id="week-location">Loading...</p>
-            <div class="week-cards" id="week-cards">
-                <!-- Cards will be populated dynamically -->
+            <div class="week-accordion" id="week-accordion">
+                <!-- Accordion items will be populated dynamically -->
             </div>
         </section>
     </main>
