--- a/Front/index.html
+++ b/Front/index.html
@@ -99,9 +99,35 @@
                                 <label for="date">Date</label>
                                 <input type="date" id="date">
                             </div>
-                            <div class="form-group">
-                                <label for="time">Time</label>
-                                <input type="time" id="time">
+                            <div class="form-group time-group">
+                                <label>Time</label>
+                                <div class="time-selects">
+                                    <select id="hour" class="time-select">
+                                        <option value="01">01</option>
+                                        <option value="02">02</option>
+                                        <option value="03">03</option>
+                                        <option value="04">04</option>
+                                        <option value="05">05</option>
+                                        <option value="06">06</option>
+                                        <option value="07">07</option>
+                                        <option value="08">08</option>
+                                        <option value="09">09</option>
+                                        <option value="10">10</option>
+                                        <option value="11">11</option>
+                                        <option value="12" selected>12</option>
+                                    </select>
+                                    <span class="time-separator">:</span>
+                                    <select id="minute" class="time-select">
+                                        <option value="00" selected>00</option>
+                                        <option value="15">15</option>
+                                        <option value="30">30</option>
+                                        <option value="45">45</option>
+                                    </select>
+                                    <select id="ampm" class="time-select">
+                                        <option value="AM">AM</option>
+                                        <option value="PM" selected>PM</option>
+                                    </select>
+                                </div>
                             </div>
                             <div class="form-group">
                                 <label for="activity">Activity (Optional)</label>
